// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout layout__Block should render a div with the proper display attribute 1`] = `
.glamor-0,
[data-glamor-0] {
  display: block;
}

<div
  className="glamor-0"
/>
`;

exports[`Layout layout__Block should render children 1`] = `
.glamor-0,
[data-glamor-0] {
  display: block;
}

<div
  className="glamor-0"
>
  Hello, world
</div>
`;

exports[`Layout layout__Block should take any css property as props 1`] = `
.glamor-0,
[data-glamor-0] {
  display: block;
  background-color: hotpink;
  padding: 20px;
}

<div
  className="glamor-0"
/>
`;

exports[`Layout layout__Flex should render a div with the proper display attribute 1`] = `
.glamor-0,
[data-glamor-0] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
}

<div
  className="glamor-0"
/>
`;

exports[`Layout layout__Flex should render children 1`] = `
.glamor-0,
[data-glamor-0] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
}

<div
  className="glamor-0"
>
  Hello, world
</div>
`;

exports[`Layout layout__Flex should take a gutter prop to determine a gutter between items 1`] = `
.glamor-0,
[data-glamor-0] {
  display: block;
}

.glamor-2,
[data-glamor-2] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
}

<div
  className="glamor-2"
>
  <div
    className="glamor-0"
  />
  <div
    className="glamor-0"
  />
</div>
`;

exports[`Layout layout__Flex should take a gutter prop to determine a gutter between items 2`] = `
.glamor-0,
[data-glamor-0] {
  display: block;
}

.glamor-2,
[data-glamor-2] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

<div
  className="glamor-2"
>
  <div
    className="glamor-0"
  />
  <div
    className="glamor-0"
  />
</div>
`;

exports[`Layout layout__Flex should take any css property as props 1`] = `
.glamor-0,
[data-glamor-0] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  background-color: hotpink;
  padding: 20px;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
}

<div
  className="glamor-0"
/>
`;

exports[`Layout layout__Inline should render a div with the proper display attribute 1`] = `
.glamor-0,
[data-glamor-0] {
  display: inline;
}

<div
  className="glamor-0"
/>
`;

exports[`Layout layout__Inline should render children 1`] = `
.glamor-0,
[data-glamor-0] {
  display: inline;
}

<div
  className="glamor-0"
>
  Hello, world
</div>
`;

exports[`Layout layout__Inline should take any css property as props 1`] = `
.glamor-0,
[data-glamor-0] {
  display: inline;
  background-color: hotpink;
  padding: 20px;
}

<div
  className="glamor-0"
/>
`;

exports[`Layout layout__InlineBlock should render a div with the proper display attribute 1`] = `
.glamor-0,
[data-glamor-0] {
  display: inline-block;
}

<div
  className="glamor-0"
/>
`;

exports[`Layout layout__InlineBlock should render children 1`] = `
.glamor-0,
[data-glamor-0] {
  display: inline-block;
}

<div
  className="glamor-0"
>
  Hello, world
</div>
`;

exports[`Layout layout__InlineBlock should take any css property as props 1`] = `
.glamor-0,
[data-glamor-0] {
  display: inline-block;
  background-color: hotpink;
  padding: 20px;
}

<div
  className="glamor-0"
/>
`;
